--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "license": "GPL-3.0-only",
   "dependencies": {
     "@polkadot/api": "^5.3.2",
-    "@supercharge/promise-pool": "^1.7.0",
     "@types/lodash": "^4.14.172",
     "@types/uuid": "^8.3.1",
     "lodash": "^4.17.21",
+    "p-map": "^5.1.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
