updated npm deets

--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-  "name": "@tailsman/api",
+  "name": "@talismn/api",
   "version": "0.0.1",
   "description": "A lib for spinning up multiple polkadot.js or lightclient instances and being able to perform aggregate queries",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Talisman",
   "license": "GPL-3.0-only",
   "dependencies": {
     "@polkadot/api": "^5.3.2",
     "@types/uuid": "^8.3.1",
     "uuid": "^8.3.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TalismanSociety/api.git"
+  },
+  "keywords": [
+    "talisman",
+    "polkadot",
+    "substrate"
+  ],
+  "bugs": {
+    "url": "https://github.com/TalismanSociety/api/issues"
+  },
+  "homepage": "https://github.com/TalismanSociety/api#readme"
 }
