--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Talisman",
   "license": "GPL-3.0-only",
   "dependencies": {
+    "@acala-network/api": "^2.0.1",
     "@polkadot/api": "^5.3.2",
     "@types/lodash": "^4.14.172",
     "@types/uuid": "^8.3.1",
