--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "prepublishOnly": "yarn build"
+    "watch": "nodemon --watch src --ext js,ts --exec yarn prepublishOnly",
+    "build": "esbuild-node-tsc",
+    "build:types": "tsc",
+    "prepublishOnly": "yarn build && yarn build:types"
   },
   "author": "Talisman",
   "license": "GPL-3.0-only",
@@ -25,6 +27,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "esbuild-node-tsc": "^1.6.1",
+    "nodemon": "^2.0.12",
     "typescript": "^4.3.5"
   },
   "files": [
