--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
   "dependencies": {
     "@acala-network/api": "^2.0.1",
     "@polkadot/api": "^5.4.1",
+    "@polkadot/keyring": "^7.2.1",
     "@polkadot/typegen": "^5.4.1",
+    "@polkadot/types": "^5.5.2",
+    "@polkadot/util-crypto": "^7.2.1",
     "@talismn/chaindata-js": "~0",
     "@types/lodash": "^4.14.172",
     "@types/uuid": "^8.3.1",
-    "bn.js": "^5.2.0",
+    "bignumber.js": "^9.0.1",
     "lodash": "^4.17.21",
     "p-map": "^4.0.0",
     "uuid": "^8.3.2"
