added main entrypoint src/index.ts
In development we want the web repo to find the typescript entrypoint
for this package so that we can hot reload changes.

In production, the "main" entrypoint (src/index.ts) will be overriden
by the "browser" and "exports" entrypoints (dist/index.js).

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.11",
   "description": "A lib for spinning up multiple polkadot.js or lightclient instances and being able to perform aggregate queries",
   "types": "dist/types",
+  "main": "./src/index.ts",
   "browser": "./dist/index.js",
   "exports": "./dist/index.js",
   "type": "module",
