--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@polkadot/keyring": "^7.2.1",
     "@polkadot/typegen": "^5.4.1",
     "@polkadot/types": "^5.5.2",
+    "@polkadot/util": "7.2.1",
     "@polkadot/util-crypto": "^7.2.1",
     "@talismn/chaindata-js": "~0",
     "@types/lodash": "^4.14.172",
