upgraded yarn to v3.0.1

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "url": "https://github.com/TalismanSociety/api/issues"
   },
   "homepage": "https://github.com/TalismanSociety/api#readme",
+  "packageManager": "yarn@3.0.1",
   "lint-staged": {
     "*.{ts,tsx,js,jsx,html,css,scss}": "prettier --write"
   },
