fixed cjs/esm mixup

--- a/package.json
+++ b/package.json
@@ -2,18 +2,17 @@
   "name": "@talismn/api",
   "version": "0.0.17",
   "description": "A lib for spinning up multiple polkadot.js or lightclient instances and being able to perform aggregate queries",
-  "types": "dist/types",
   "main": "./src/index.ts",
+  "types": "./dist/index.d.ts",
   "browser": "./dist/index.js",
   "exports": "./dist/index.js",
-  "type": "module",
   "scripts": {
     "prepare": "husky install",
     "pre-commit": "lint-staged",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --watch src --ext js,ts --exec yarn prepack",
     "build": "esbuild-node-tsc",
-    "build:types": "tsc",
+    "build:types": "tsc --emitDeclarationOnly",
     "prepack": "yarn build && yarn build:types"
   },
   "author": "Talisman",
